Primeiros testes de conexão com API

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -150,7 +150,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/jetbrains_mono"
             android:inputType="textCapSentences"
-            android:onClick="cadastro"
+            android:onClick="Logar"
             android:text="Entrar"
             android:textColor="@color/black"
             android:textSize="12sp"
