Tela de Loading

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="fundo">#FFEEE1</color>
     <color name="login_fundo">#244028</color>
     <color name="botao">#94E986</color>
+    <color name="bege">#FFEEE1</color>
 </resources>
