--- a/FrontEnd/app/src/main/res/values/preloaded_fonts.xml
+++ b/FrontEnd/app/src/main/res/values/preloaded_fonts.xml
@@ -2,5 +2,6 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/cherry_swash</item>
+        <item>@font/kurale</item>
     </array>
 </resources>
