--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,7 +7,7 @@
         android:title="cardapio"/>
 
     <item
-        android:id="@+id/garcom"
+        android:id="@+id/pedido"
         android:icon="@drawable/garcom"
         android:title="pedido" />
 
