--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,7 +13,7 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/garcom"
+        android:id="@+id/pedido"
         android:name="com.example.comedoria.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
