--- a/app/src/main/res/drawable/rounded_login_ui.xml
+++ b/app/src/main/res/drawable/rounded_login_ui.xml
@@ -6,7 +6,7 @@
     <corners
         android:radius="8dp" />
     <stroke android:width="0.9dp"
-        android:color="@color/black" />
+        android:color="@android:color/black" />
     <!--  stroke for defining a border for view -->
 
     <size
