--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="login_fundo">#244028</color>
     <color name="botao">#94E986</color>
     <color name="bege">#FFEEE1</color>
+    <color name="transparente">#00000000</color>
 </resources>
