--- a/app/src/main/res/layout/modelo_categoria.xml
+++ b/app/src/main/res/layout/modelo_categoria.xml
@@ -4,15 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/contraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white"
+    android:clipToPadding="false">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_login_ui"
+        android:elevation="32dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,8 +35,8 @@
             android:id="@+id/linearLayout3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/rounded_login_ui"
-            android:backgroundTint="#93E885">
+            android:background="@drawable/borda_inferior_arredondada"
+            android:elevation="@dimen/cardview_compat_inset_shadow">
 
             <TextView
                 android:id="@+id/txtDescricaoCategoria"
