--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -278,6 +278,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/jetbrains_mono"
             android:inputType="textCapSentences"
+            android:onClick="cancelar"
             android:text="Cancelar"
             android:textColor="@color/black"
             android:textSize="12sp"
