--- a/app/src/main/res/layout/teste.xml
+++ b/app/src/main/res/layout/teste.xml
@@ -19,6 +19,15 @@
         app:layout_constraintVertical_weight="3">
 
 
+        <ImageView
+            android:id="@+id/home"
+            android:layout_width="83dp"
+            android:layout_height="72dp"
+            android:clickable="true"
+            android:onClick="home"
+            app:srcCompat="@drawable/ic_home"
+            tools:layout_editor_absoluteX="30dp"
+            tools:layout_editor_absoluteY="71dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.recyclerview.widget.RecyclerView
