--- a/app/src/main/res/layout/activity_produtos.xml
+++ b/app/src/main/res/layout/activity_produtos.xml
@@ -35,8 +35,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/verde_fundo_categoria"
         android:onClick="irParaOCarrinho"
-        android:text="Button"
+        android:text="Ir para o carrinho"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
