--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,6 +2,7 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/jetbrains_mono</item>
+        <item>@font/jetbrains_mono_thin</item>
         <item>@font/kurale</item>
     </array>
 </resources>
