layout_remumo_pedido(não complete)

--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -66,7 +66,7 @@
                 android:id="@+id/txtEmail"
                 android:layout_width="151dp"
                 android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
+                android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="email"
                 android:imeOptions="actionNext"
                 android:singleLine="true"
@@ -110,7 +110,7 @@
                 android:id="@+id/txtConfirmarEmail"
                 android:layout_width="151dp"
                 android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
+                android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="confirmar email"
                 android:singleLine="true"
                 android:textColor="#80000000"
@@ -199,7 +199,7 @@
                 android:id="@+id/txtSenha"
                 android:layout_width="151dp"
                 android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
+                android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="senha"
                 android:singleLine="true"
                 android:textColor="#80000000"
@@ -243,7 +243,7 @@
                 android:id="@+id/txtConfirmarSenha"
                 android:layout_width="151dp"
                 android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
+                android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="confirmar senha"
                 android:singleLine="true"
                 android:textColor="#80000000"
