--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -87,7 +87,7 @@
                 android:id="@+id/txtEmail"
                 android:layout_width="151dp"
                 android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
+                android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="email ou cpf"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
@@ -130,7 +130,7 @@
                 android:id="@+id/txtSenha"
                 android:layout_width="151dp"
                 android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
+                android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="senha"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
