--- a/app/src/main/res/layout/teste.xml
+++ b/app/src/main/res/layout/teste.xml
@@ -63,7 +63,7 @@
         android:layout_marginTop="560dp"
         android:backgroundTint="@color/white"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_pessoa"
+        android:src="@drawable/botaodeinicio"
         app:elevation="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
