--- a/app/src/main/res/layout/activity_carrinho.xml
+++ b/app/src/main/res/layout/activity_carrinho.xml
@@ -197,7 +197,7 @@
             app:layout_constraintTop_toTopOf="@+id/txtLabelTotal" />
 
         <Button
-            android:id="@+id/btnFinalizarPedido"
+            android:id="@+id/Perfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
