--- a/app/src/main/res/layout/card_produto.xml
+++ b/app/src/main/res/layout/card_produto.xml
@@ -7,6 +7,7 @@
     android:layout_gravity="center"
     android:layout_margin="16dp"
     android:background="#00FFFFFF"
+    android:visibility="visible"
     app:cardBackgroundColor="@color/verde_fundo_categoria"
     app:cardCornerRadius="16dp">
 
