--- a/app/src/main/res/layout/color_spinner_dropdown_layout.xml
+++ b/app/src/main/res/layout/color_spinner_dropdown_layout.xml
@@ -3,5 +3,6 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/black"
-    android:textSize="20sp"/>
+    android:text="Categoria"
+    android:textColor="@color/bege"
+    android:textSize="20sp" />
