--- a/app/src/main/res/layout/layout_add_produto.xml
+++ b/app/src/main/res/layout/layout_add_produto.xml
@@ -49,7 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.389"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/inputNome"
+            app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
             app:layout_constraintVertical_bias="0.064" />
 
         <LinearLayout
@@ -62,32 +62,20 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.737"
             app:layout_constraintStart_toEndOf="@+id/spinner2"
-            app:layout_constraintTop_toBottomOf="@+id/inputNome"
+            app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
             app:layout_constraintVertical_bias="0.063">
 
-            <ImageView
-                android:id="@+id/imageView10"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/borda_quatro_pontas_arrendondadas_verde_escuro"
-                app:srcCompat="@android:drawable/ic_menu_add" />
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/inputQnt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Quantidade" />
-
-            <ImageView
-                android:id="@+id/imageView11"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_weight="1"
-                android:background="@drawable/borda_quatro_pontas_arrendondadas_verde_escuro"
-                app:srcCompat="@android:drawable/ic_menu_add" />
-
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/textInputQnt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="hint" />
+            </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -120,7 +108,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputQnt"
+            android:id="@+id/inputIngredientes"
             android:layout_width="276dp"
             android:layout_height="88dp"
             android:layout_marginTop="3dp"
@@ -135,7 +123,7 @@
             app:layout_constraintVertical_bias="0.813">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/textInputQnt"
+                android:id="@+id/textInputDingredientes"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
                 android:background="@drawable/input_claro_arrebondadado_stroke"
@@ -150,7 +138,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/inputNome"
+            android:id="@+id/inputNomeProduto"
             android:layout_width="272dp"
             android:layout_height="45dp"
             android:padding="5dp"
